feat(template): remove operator and viewer ping routes
